<resources>
    <string name="app_name">Circuit</string>
    <string name="add_item">Add Item</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_circuit">Welcome to Circuit</string>
    <string name="login_desc">Enter email and password to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="blank_email_or_password">Email or password can not be left blank!</string>
    <string name="edit_item">Edit Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_description">Item Description</string>
    <string name="add_image">Add Image</string>
    <string name="blank_name">Name can not be left blank!</string>
    <string name="blank_price">Price can not be left blank!</string>
    <string name="no_image_picker_app_found">No app found to pick an image</string>
    <string name="save">Save</string>
    <string name="no_items_added_yet">No Items added yet!</string>
    <string name="delete_item">Delete Item</string>
    <string name="share">Delegate</string>
    <string name="item_image">Item Image</string>
    <string name="bought">Bought</string>
    <string name="item_menu">Item Menu</string>
    <string name="select_image">Select Image</string>
    <string name="pick_image_from_gallery">Pick from Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">Cancel</string>
    <!--    <string name="no_image_picker_app_found">No image picker app found</string>-->
    <string name="no_camera_app_found">No camera app found</string>
    <string name="login_register">Login/Register</string>

</resources>